assets/css/style.css
* {
	margin: 0;
}

html, body {
	height: 100%;
}

/*Creating size of text on page*/
.content {
	min-height: 100%;
	height: 100%;
	margin: 0 auto -109px;
}

/*Pushing Footer Down*/
.bottomFooter{
	height: 107px;
}

/*Adding Background and removing spacing on sides and top, adding default font*/
body {
  background: url('../images/background.png') #ffffff;
  margin: 0px;
  padding: 0px;
  font-family: 'Arial','Helvetica Neue', Helvetica, sans-serif;
  color: #777777;
}

/*Changing text link color, removing underline on links*/
a {
	display: block;
	padding: 4px;
	text-decoration: none;
	color: #777777;
}

/*Change link colors on hover*/
a:hover {
	color: black;
}

/*Setting default header fonts and sizes*/
h1, h2, h3 {
	font-family: 'Georgia', Times, Times New Roman, serif;
	font-weight: bold;
	font-size: 30px;
	color: #4aaaa5;
}

/*Overrid 3rd section headers to better height*/
h3 {
	font-size: 22px;

}

/*Add header to page, with the grey bottom as described*/
header {
	background: #ffffff;
	border-bottom: 2px solid #cccccc;
}

/*Header Box Not working properly*/
#headerBox {
	/*width: px;*/
	height: 90px;
	margin: 0px auto;
	/*align header block using floats*/
	/*float: left;*/
	/*display: flex;*/
	align-items: center;

}

/*Creating teal box to contain name*/
#nameTextBox {
	background: #4aaaa5;
	width: 250px;
	height: 90px;
	margin-left: 8%;
	float: left;
	align-items: center;
}

/*Changing font text and aligning text*/
#nameText {
	margin: 25px;
	text-align: center;
	color: white;
}

/*Adjust location of Nav Menu*/
nav {
	height: 20px;
	margin-top: 30px;
	margin-right: 8%;
	float: right;
}

.clearfix::after {
	content:"";
	display:block;
	clear: both;
}

.nav div {
	float: left;
}

.navigation {
	background: white;
	height: 100%;
	padding: 0px 15px;
}

/*Add navigation seperators*/
.seperation {
	background: #efefef;
	width: 1px;
	height: 100%;
}

#PageContents {
	width: 960px;
	margin: 38px auto;
	clear: both;
	justify-content: space-between;

}
section {
	float: left;
}

/*Create box for content*/
section, aside {
	background: #ffffff;
	border: 1px solid #dddddd;
	width: 588px;
	padding: 40px 30px 30px 30px;
}

/*Correcting spacing in about me section*/
section p {
	line-height: 190%;
}

#grey_line {
	background: #dddddd;
	height: 3px;
	margin: 30px 0 20px 0;
}

aside {
	width: 208px;
	height: 133px;
	padding: 30px 30px 35px 30px;
	float: right;
}

aside img {
	width: 64px;
	height: 64px;
}

#small_grey_line {
	background: #eeeeee;
	height: 2px;
	margin: 20px 0 22px 0;
}

#social_media {
	
	
}

/*Footer Formatting*/
footer {
	background: #666666;
	border-top: 9px solid #4aaaa5;
	height: 100px;
	align-items: center;
	clear: both;
	/*display: flex*/
}

#footerText {
	font-size: 12px;
	color: #cccccc;
	align-content: center;
	/*margin-left: 50%;*/
	padding: 25px;
}

/*About me settings*/
#selfie {
	margin: 10px 25px 10px 0px;
	height: 200px;
	width: 200px;
	float: left;
}

